<resources>
    <string name="app_name">Age Calculator</string>
    <string name="age_format">%d years, %d months, %d days</string>
    <string name="age_calculator_title">Age Calculator</string>
    <string name="select_date_of_birth">Select Date of birth</string>
    <string name="select_destination_date">Select Destination Date</string>
    <string name="calculate_age">Calculate Age</string>
    <string name="birthday_calculator_title">Birthday Calculator</string>
    <string name="select_destination_age_title">Select destination age</string>
    <string name="years">Years</string>
    <string name="months">Months</string>
    <string name="calculate_birthday">Calculate Birthday</string>
    <string name="invalid_dates">invalid dates</string>

</resources>