<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="ageCalculatorViewModel"
            type="com.example.birthdaycalculator.ui.main.AgeCalculatorViewModel" />

        <variable
            name="birthdayCalculatorViewModel"
            type="com.example.birthdaycalculator.ui.main.BirthdayCalculatorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".ui.main.MainFragment">

        <TextView
            android:id="@+id/age_calculator_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age_calculator_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/age_calculator_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_calculator_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/select_date_birth_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_date_of_birth"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/date_birth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{ageCalculatorViewModel.dateOfBirth}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/select_date_birth_title"
                    app:layout_constraintStart_toEndOf="@id/titles_barrier"
                    app:layout_constraintTop_toTopOf="@id/select_date_birth_title"
                    tools:text="שלום" />

                <ImageView
                    android:id="@+id/date_birth_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> ageCalculatorViewModel.onSelectBirthDate()}"
                    android:src="@drawable/ic_calendar_month_48px"
                    app:layout_constraintBottom_toBottomOf="@id/select_date_birth_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dates_barrier"
                    app:layout_constraintTop_toTopOf="@id/select_date_birth_title" />

                <TextView
                    android:id="@+id/select_dest_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_destination_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/select_date_birth_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/titles_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="select_date_birth_title, select_dest_date_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/dates_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="date_birth, dest_date" />

                <TextView
                    android:id="@+id/dest_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{ageCalculatorViewModel.destDate}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/select_dest_date_title"
                    app:layout_constraintStart_toStartOf="@id/date_birth"
                    app:layout_constraintTop_toTopOf="@id/select_dest_date_title"
                    tools:text="01/03/1980" />

                <ImageView
                    android:id="@+id/dest_date_picker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> ageCalculatorViewModel.onSelectDestDate()}"
                    android:src="@drawable/ic_calendar_month_48px"
                    app:layout_constraintBottom_toBottomOf="@id/select_dest_date_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/dates_barrier"
                    app:layout_constraintTop_toTopOf="@id/select_dest_date_title" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/calc_age_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> ageCalculatorViewModel.onCalculateAgeClick()}"
                    android:text="@string/calculate_age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/select_dest_date_title" />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{ageCalculatorViewModel.calculatedAge}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toStartOf="@id/clear_age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calc_age_btn"
                    tools:text="28 years, 10 months, 30 days" />

                <ImageView
                    android:id="@+id/clear_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> ageCalculatorViewModel.onClearAgeClick()}"
                    android:src="@drawable/ic_delete_48px"
                    android:visibility="@{ageCalculatorViewModel.calculatedAge != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/age"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/age"
                    app:layout_constraintTop_toTopOf="@id/age" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/birthday_calculator_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/birthday_calculator_title"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_calculator_card" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:cardElevation="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/birthday_calculator_title">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <TextView
                    android:id="@+id/birth_calc_dest_date_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/select_destination_date"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/birth_calc_dest_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{birthdayCalculatorViewModel.destDate}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/birth_calc_dest_date_title"
                    app:layout_constraintStart_toEndOf="@id/birth_calc_titles_barrier"
                    app:layout_constraintTop_toTopOf="@id/birth_calc_dest_date_title"
                    tools:text="01/03/1980" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> birthdayCalculatorViewModel.onSelectDestDate()}"
                    android:src="@drawable/ic_calendar_month_48px"
                    app:layout_constraintBottom_toBottomOf="@id/birth_calc_dest_date_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/birth_calc_dest_date"
                    app:layout_constraintTop_toTopOf="@id/birth_calc_dest_date" />

                <TextView
                    android:id="@+id/birth_calc_age_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/select_destination_age_title"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birth_calc_dest_date_title" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/birth_calc_titles_barrier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="end"
                    app:constraint_referenced_ids="birth_calc_dest_date_title, birth_calc_age_title" />

                <EditText
                    android:id="@+id/edt_dest_age_years"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={birthdayCalculatorViewModel.destDateYears}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/birth_calc_age_title"
                    app:layout_constraintStart_toStartOf="@id/birth_calc_dest_date"
                    app:layout_constraintTop_toTopOf="@id/birth_calc_age_title"
                    tools:text="16" />

                <TextView
                    android:id="@+id/years_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/years"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/birth_calc_age_title"
                    app:layout_constraintStart_toEndOf="@id/edt_dest_age_years"
                    app:layout_constraintTop_toTopOf="@id/birth_calc_age_title" />

                <EditText
                    android:id="@+id/edt_dest_age_months"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:importantForAutofill="no"
                    android:inputType="numberDecimal"
                    android:text="@={birthdayCalculatorViewModel.destDateMonths}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/birth_calc_age_title"
                    app:layout_constraintStart_toEndOf="@id/years_title"
                    app:layout_constraintTop_toTopOf="@id/birth_calc_age_title"
                    tools:text="8" />

                <TextView
                    android:id="@+id/months_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/months"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                    app:layout_constraintBottom_toBottomOf="@id/birth_calc_age_title"
                    app:layout_constraintStart_toEndOf="@id/edt_dest_age_months"
                    app:layout_constraintTop_toTopOf="@id/birth_calc_age_title" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/calc_birthday_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:onClick="@{() -> birthdayCalculatorViewModel.onCalculateBirthdayClick()}"
                    android:text="@string/calculate_birthday"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/birth_calc_age_title" />

                <TextView
                    android:id="@+id/birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@{birthdayCalculatorViewModel.calculatedBirthday}"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                    app:layout_constraintEnd_toStartOf="@id/clear_birthday"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/calc_birthday_btn"
                    tools:text="23/06/1998" />

                <ImageView
                    android:id="@+id/clear_birthday"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> birthdayCalculatorViewModel.onClearBirthdayClick()}"
                    android:src="@drawable/ic_delete_48px"
                    android:visibility="@{birthdayCalculatorViewModel.calculatedBirthday != null ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toBottomOf="@id/birthday"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/birthday"
                    app:layout_constraintTop_toTopOf="@id/birthday" />


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
